--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,8 @@ bodyClass: page-home
 {% if site.data.features %}
 <div class="strip strip-grey">
   <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
-    <div class="row justify-content-center">
+      <h2 class="service-title"><center>Testimonials</center></h2></br>
+      <div class="row justify-content-center">
 
       {% for feature in site.data.features %}
       <div class="col-12 col-md-6 col-lg-4 mb-2">
