--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -14,7 +14,7 @@
 }
 .logo-mobile {
   display: block;
-  width: 40px;
+  width: 70%;
   padding: 10px 0 10px 0;
   @include media-breakpoint-up(sm) {
     display: none;
