--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,6 +11,22 @@ bodyClass: page-contact
                 <h1 class="title">{{page.title}}</h1>
                 {% include call.html show_button=false %}
                 <div class="content mt-4">{{content}}</div>
+                <div class="call">
+                    <form name="contact" method="POST" data-netlify="true">
+                    <p>
+                <label>Your Name: <input type="text" name="name" /></label>   
+                    </p>
+                    <p>
+                <label>Your Email: <input type="email" name="email" /></label>
+                    </p>
+                    <p>
+                <label> <textarea placeholder="Message" name="message"></textarea></label>
+                 </p>
+                 <p>
+                <button type="submit" class="button">Send</button>
+                </p>
+                </form>
+                </div>
             </div>
         </div>
     </div>
