--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,13 +11,12 @@ bodyClass: page-contact
                 <h1 class="title">{{page.title}}</h1>
                 {% include call.html show_button=false %}
                 <div class="content mt-4">{{content}}</div>
-                <div class="call">
-                    <form name="contact" method="POST" data-netlify="true">
+                      <div class="call">    <form name="contact" method="POST" data-netlify="true">
                     <p>
-                <label>Your Name: <input type="text" name="name" /></label>   
+                <label><input placeholder="Name" type="text" name="name" /></label>   
                     </p>
                     <p>
-                <label>Your Email: <input type="email" name="email" /></label>
+                <label><input placeholder="Email" type="email" name="email" /></label>
                     </p>
                     <p>
                 <label> <textarea placeholder="Message" name="message"></textarea></label>
