--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,11 +38,11 @@ bodyClass: page-home
       </div>
       {% endfor %}
     </div>
-    <div class="row justify-content-center">
+    <!-- <div class="row justify-content-center">
       <div class="col-auto">
         <a class="button button-primary" href="{{ "services" | relative_url }}">View All Services</a>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
