--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -1,10 +1,11 @@
 .feature {
   height: 100%;
   border: 1px solid $white-offset;
-  border-radius: 3px;
+  border-radius: 8px;
   font-size: 16px;
+  line-height: 1.5;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #e0e0e0;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -25,6 +26,8 @@
   font-size: 18px;
   }
   .feature-content {
+    font-size: 0.9rem;
+    font-style: italic;
     margin-bottom: 0;
     margin-top: auto;
   }
