--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,22 +11,13 @@ bodyClass: page-contact
                 <h1 class="title">{{page.title}}</h1>
                 {% include call.html show_button=false %}
                 <div class="content mt-4">{{content}}</div>
-                      <div class="call">    <form name="contact" method="POST" data-netlify="true">
-                    <p>
-                <label><input placeholder="Name" type="text" name="name" /></label>   
-                    </p>
-                    <p>
-                <label><input placeholder="Email" type="email" name="email" /></label>
-                    </p>
-                    <p>
-                <label> <textarea placeholder="Message" name="message"></textarea></label>
-                 </p>
-                 <p>
-                <button type="submit" class="button">Send</button>
-                </p>
-                </form>
-                </div>
-            </div>
+                    <form name="contact" method="POST" data-netlify="true">
+                        <p><input placeholder="Name" type="text" name="name" /></p>
+                        <p><input placeholder="Email" type="email" name="email" /></p>
+                        <p><textarea placeholder="Message" name="message"></textarea></p>
+                        <p><button type="submit" class="button">Send</button></p>
+                    </form>  
+      </div>
         </div>
     </div>
-</div>
+</div> 
