--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -23,3 +23,11 @@
     text-decoration: none;
   }
 }
+
+input[type=text],input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
