--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 // Colors
 $primary: #E5261F;
 $secondary: #f88379;
+$tertiary:#fbeded;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
