--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -5,7 +5,7 @@
   font-size: 16px;
   line-height: 1.5;
   padding: 20px;
-  background-color: #e0e0e0;
+  background-color: $tertiary;
   display: flex;
   align-items: center;
   flex-direction: column;
