--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 // Colors
 $primary: #E5261F;
 $secondary: #f88379;
-$tertiary:#fbeded;
+$tertiary:#f1f1f1;// #fbeded;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
