--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -18,20 +18,11 @@ bodyClass: page-services-list
   </div>
 </div>
 
-<div class="container pt-6 pb-6">
-  <div class="row">
+    <div class="container">
+<!-- <div class="container pb-6"> -->
     {% assign weighted_services = site.services | sort: "weight" %}
     {% for service in weighted_services %}
-    <div class="col-12 col-md-6 mb-3">
-      <div class="service service-summary">
-        <div class="service-content">
-          <h2 class="service-title">
-            <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
-          </h2>
-          <p>{{ service.content | markdownify | strip_html | truncate: 100 }}</p>
-        </div>
-      </div>
-    </div>
+          {{ service.content }}
     {% endfor %}
-  </div>
+</br>
 </div>
