--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,8 @@ bodyClass: page-home
             <h2 class="service-title">
               <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
             </h2>
-            <p>{{ service.content | markdownify | strip_html | truncate: 100 }}</p>
+            <p>{{ service.content | markdownify | strip_html | truncate: 150 }}<a href="{{ service.url | relative_url }}"> Read More...</a>
+</p>
           </div>
         </div>
       </div>
