--- a/_layouts/teams.html
+++ b/_layouts/teams.html
@@ -36,7 +36,7 @@ bodyClass: page-team-list
                     <a target="_blank" href="{{ team.linkedinurl }}">LinkedIn</a>
                     {% endif %}
                 </div>
-                <div class="team-content">{{ team.content | truncate: 120 }}</div>
+                <div class="team-content">{{ team.content | truncate: 250 }}<a href="{{ team.url | relative_url }}"> Read More ...</a></div>
             </div>
         </div>
         {% endfor %}
